fixiheader search overflow

--- a/css/style.css
+++ b/css/style.css
@@ -173,12 +173,12 @@ img {
 }
 
 .header-middle_search > p {
-  font-size: 1.1875em;
+  font-size: 1.3125em;
 }
 
 .header-middle_search > img {
-  height: 1.5625em;
-  width: 1.5625em;
+  height: 1.6875em;
+  width: 1.6875em;
 }
 
 .header-bottom {
